cluster/apps/default/hajimari/haji-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`hajimari.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: hajimari
          port: 3000
  tls:
    secretName: ${SECRET_CERT}
