cluster/apps/default/hajimari/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`hajimari.bharris.xyz`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: hajimari
          port: 3000
  tls:
    secretName: letsencrypt-wildcard-cert-bharris.xyz-prod
